RESOLVED FIXED283407
Follow up to 286840@main: whitespace/indent style guide error in WebViewImpl.mm
https://bugs.webkit.org/show_bug.cgi?id=283407
Summary Follow up to 286840@main: whitespace/indent style guide error in WebViewImpl.mm
Abrar Rahman Protyasha
Reported 2024-11-20 02:11:45 PST
There was a simple style guide error raised by check-webkit-style in EWS for 286840@main, but I landed the patch without addressing this style guide error. ``` ERROR: Source/WebKit/UIProcess/mac/WebViewImpl.mm:6704: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ``` Let's fix that.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-20 02:16:25 PST
Abrar Rahman Protyasha
Comment 2 2024-11-20 10:18:19 PST
EWS
Comment 3 2024-11-20 10:25:41 PST
Committed 286862@main (f8c0f4981e73): <https://commits.webkit.org/286862@main> Reviewed commits have been landed. Closing PR #36906 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.