Follow up to 286840@main: whitespace/indent style guide error in WebViewImpl.mm https://bugs.webkit.org/show_bug.cgi?id=283407 rdar://140263996

Reviewed by Wenson Hsieh.

This patch addresses the relatively simple check-webkit-style failure
presented by EWS on 286840@main. Namely:

```
ERROR: Source/WebKit/UIProcess/mac/WebViewImpl.mm:6704:  When wrapping a line, only indent 4 spaces.  [whitespace/indent] [3]
```

* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::installImageAnalysisOverlayView):

Canonical link: https://commits.webkit.org/286862@main